syntax = "proto3";

package api.v1;

option go_package = "api/v1/greeter";

service MyServer {
  rpc Enqueue (TaskReq) returns (TaskResp) {}
}

message TaskReq {}

message TaskResp {}